--- a/Everything_About_Eric_Tao/package.json
+++ b/Everything_About_Eric_Tao/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next": "^15.5.9",
     "next-themes": "latest",
+    "nodemailer": "^6.9.16",
     "react": "^18.2",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.2",
