--- a/Everything_About_Eric_Tao/package.json
+++ b/Everything_About_Eric_Tao/package.json
@@ -54,6 +54,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.5.9",
+    "react-markdown": "^9.1.0",
     "next-themes": "latest",
     "nodemailer": "^6.9.16",
     "react": "^18.2",
